# zero2prod

./: Cargo.toml  configuration.yaml
.github/workflows/: general.yml
.sqlx/: query-ed279fc2dda0c3ede3e81a4500fcaa9da2220f8a9ad6c1debc3095deb9f84759.json
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
tests/: health_check.rs
